policies/l7pi_headers.yaml
# curl httpbin.httpbin:8000/status/200 -v
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin-headers
  namespace: pi-namespace
spec:
  exportTo: 
  - "*"
  hosts:
  - httpbin
  http:
  - headers:
     response:
      add:
       test: "Hello from Pi!"
    route:
    - destination:
        host: httpbin # httpbin is running in ambient mode
        port:
          number: 8000
