policies/l4cluster_policy.yaml
# curl -H "X-Test: istio-is-cool" led-app.pi-namespace:80
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
 name: helloworld-allow
 namespace: default
spec:
 selector:
   matchLabels:
     app: helloworld
 action: ALLOW
 rules:
 - from:
   - source:
       principals: ["cluster.local/ns/default/sa/sleep"]
