policies/l7auth_policy.yaml
# curl -H "X-Test: istio-is-cool" led-app.pi-namespace:80
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
 name: ledapp-changer
 namespace: default
spec:
 selector:
   matchLabels:
     app: led-app
 action: ALLOW
 rules:
 - from:
   - source:
       principals: ["cluster.local/ns/httpbin/sa/httpbin"]
   when:
   - key: request.headers[X-Test]
     values: ["istio-is-cool"]
